infrastructure/msa/01-msa-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-a-deployment
  labels:
    app: msa
spec:
  replicas: 3
  selector:
    matchLabels:
      app: microservice-a
  template:
    metadata:
      labels:
        app: microservice-a
    spec:
      containers:
      - name: microservice-a
        image: aminehajali/msa
        ports:
        - containerPort: 5000
