infrastructure/msa/02-msa-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: microservice-a-svc
spec:
  selector:
    app: microservice-a
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      nodePort: 30007
      targetPort: 5000
